      p-values = 0, instead the theoretically smallest possible p-value will be
      determined by the number of permutations used. E.g. for nPerm = 10000,
      the smallest p-value will be 1 / 10001 = 9.999e-05.

    o Improved speed of checkLoadArg().

    o Improved speed of gene-set statistic calculation for GSEA in calcGeneSetStat().

    o Improved speed significantly of FDR calculation for GSEA in fdrGSEA().

CHANGES IN VERSION 1.12
-----------------------
    o No changes
	
CHANGES IN VERSION 1.10.2
-------------------------

DOCUMENTATION

    o Updated the vignette R code to avoid an error in the call to biomart
	    throught the getBM function.

CHANGES IN VERSION 1.10.1
-------------------------

BUG FIXES

    o Fixed a bug in runGSA which returned wrong numbers for the up- and down-
	    regulated genes, for the GSEA method.
	
CHANGES IN VERSION 1.8.2
-------------------------

BUG FIXES

    o Updated loading of suggested packages from using require() to requireNamespace()
      instead.

CHANGES IN VERSION 1.6.2
-------------------------

BUG FIXES

    o Fixed a bug in loadMAdata so that normalizing using MAS5 is now returning 
      log2-transformed expression values.

CHANGES IN VERSION 1.6.1
-------------------------

DOCUMENTATION

    o Updated this NEWS file

CHANGES IN VERSION 1.6.0 
-------------------------

NEW FEATURES

    o Added a function writeFilesForKiwi() that enables a seamless integration of the
      output from a gene set analysis with piano to the network-based visualization
      offered by the python tool Kiwi.

CHANGES IN VERSION 1.4.2
-------------------------

BUG FIXES

    o Fixed a bug in loadMAdata so that mas5 can now be used for normalization.

CHANGES IN VERSION 1.4.1
-------------------------

BUG FIXES

    o Fixed a bug in GSAsummaryTable which returned an error in the case of analyzing
      only a single gene set.

CHANGES IN VERSION 1.4.0
-------------------------

NEW FEATURES
